syntax = "proto3";

option csharp_namespace = "SaveAnywhere.SaveData";

message Vector2 {
	float x = 1;
	float y = 2;
}